2014-05-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.4 released.

2014-05-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.3 released.

2014-05-12  Carl Hetherington  <cth@carlh.net>

	* Use libdcp::raw_convert instead of boost::lexical_cast and
	LocaleGuard, hopefully to fix large numbers being written with
	thousands separators on some locales.

2014-05-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.2 released.

2014-05-10  Carl Hetherington  <cth@carlh.net>

	* Fix setup of the libswresample context to work with high channel counts.

2014-05-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.1 released.

2014-05-09  Carl Hetherington  <cth@carlh.net>

	* Fix crash on using content with more than 12 audio channels.

	* Re-introduce ffprobe call when adding content.

2014-05-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.0 released.

2014-05-02  Carl Hetherington  <cth@carlh.net>

	* Version 1.68.0 released.

2014-04-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.67.1 released.

2014-04-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.67.0 released.

2014-04-27  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.16 released.

2014-04-27  Carl Hetherington  <cth@carlh.net>

	* Add .dpx to the list of acceptable image files.

	* Slightly better handling of uncaught exceptions.

	* Use our own directory picker on 14.04 (as well as 13.04 and 13.10) as
	it appears that the same bug remains.

2014-04-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.15 released.

2014-04-25  Carl Hetherington  <cth@carlh.net>

	* Fix subtitle display when the next subtitle is decoded before the previous
	one has finished.

2014-04-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.14 released.

2014-04-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.13 released.

2014-04-21  Carl Hetherington  <cth@carlh.net>

	* Update to es_ES translation from Manuel AC.

	* Update to fr_FR translation from Thierry Journet.
